fix VietQR 17/10
